--- a/SimpleGame/SimpleGame.vcxproj
+++ b/SimpleGame/SimpleGame.vcxproj
@@ -180,10 +180,14 @@
   <ItemGroup>
     <None Include="Shaders\SolidRect.fs" />
     <None Include="Shaders\SolidRect.vs" />
+    <None Include="Shaders\SolidRectGauge.fs" />
+    <None Include="Shaders\SolidRectGauge.vs" />
     <None Include="Shaders\SolidRectWithTexture.fs" />
     <None Include="Shaders\SolidRectWithTexture.vs" />
     <None Include="Shaders\SolidRectWithTextureSeq.fs" />
     <None Include="Shaders\SolidRectWithTextureSeq.vs" />
+    <None Include="Shaders\SolidRectXY.fs" />
+    <None Include="Shaders\SolidRectXY.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
